--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,32 @@
     height: 200px;
     width: 200px;
 }
+
+.w100{
+    width: 100px;
+}
+
+.w140{
+    width: 140px;
+}
+
+.avatar{
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: solid gray 1px;
+}
+
+.fondo-modal-imagen{
+    background: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 9999;
+}
+
+.oculto{
+    display: none;
+}
